--- a/src/components/atoms/button/Button.module.css
+++ b/src/components/atoms/button/Button.module.css
@@ -18,13 +18,13 @@
   @apply text-[9px]  p-2;
 }
 .button--small {
- @apply text-[10px]  p-2;
+  @apply text-[10px]  p-2;
 }
 .button--medium {
   @apply text-xs p-3;
 }
 .button--large {
-  @apply text-base px-4 py-2.5;
+  @apply text-sm xl:text-base px-2 xl:px-4 py-1 py-2.5;
 }
 .button--fullarge {
   @apply text-lg  p-2.5;
